AC_INIT(ogf, 0.1)

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([OGF.pc])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX

LT_INIT

PKG_CHECK_MODULES(OGRE, [OGRE])
PKG_CHECK_MODULES(CEGUI, [CEGUI])
PKG_CHECK_MODULES(CEGUI_OGRE, [CEGUI-OGRE])
PKG_CHECK_MODULES(OIS, [OIS])
PKG_CHECK_MODULES(SDL_MIXER, [SDL_mixer])

AC_OUTPUT([
	Makefile
	src/Makefile
])
